# video_analysis_pipeline_research

./: .gitignore  README.md  download_log.txt  download_progress.json  h origin main  main.py  main2.py  pyproject.toml  requirements.txt  run_benchmarks.py
benchmark_results/: benchmark_progress.json  benchmark_results.json
benchmarks/: __init__.py  api_key_rotator.py  benchmark_legacy.py  extraction_wrapper.py  runner.py
benchmarks/methods/: __init__.py  clip_dedup.py
config/: benchmark.yaml  default.yaml  fast.yaml  quality.yaml
data/: download.py
experiments/: compare_clustering_methods.py  pipeline.py
figures/: generate_figures.py  generate_pipeline_diagram.py  sys_dia.ipynb  sys_dia.py
main_results/: progress.json
notebooks/: data_exploration.ipynb  result_analysis.ipynb  videos_with_extraction_errors_detailed.csv
readmes/: README.md
results/: progress.json
src/: parallel_pipeline.py  pipeline.py
src/deduplication/: base.py  clip_embed.py  dhash.py  hierarchical.py  lpips.py  phash.py  readme.md  ssim.py  whash.py
src/detection/: change_detector.py  readme.md  scene_detector.py
src/extraction/: llm_client.py  prompts.py  prompts1.py  schema.py  schema1.py
src/ingestion/: audio_extractor.py  readme.md  video_loader.py
src/selection/: clustering.py  readme.md  representative.py
src/utils/: config.py  logging.py  metrics.py  video_utils.py
tests/: audio_feature_extractor.py  candidate_extraction.py  clip.py  clustering.py  hierarchical.py  phash.py  pipeline.py  representative.py  scene_detection.py  ssim.py  video_loader.py
